[package]
name = "fast-case"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/ericyd/fast-case"
description = "Fast case-change library for Node.js"
license = "See LICENSE"

[lib]
# required to compile to WebAssembly
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
